--- a/frontend/public/signup.html
+++ b/frontend/public/signup.html
@@ -17,19 +17,19 @@
     <form id="signup-form" class="form-signin">
         <h2 class="form-signin-heading">Please sign up</h2>
         <label for="emailId">Email:</label>
-        <input type="email" id="emailId" name="emailId" class="form-control" required><br><br>
+        <input type="email" id="emailId" name="emailId" class="form-control" required>
 
         <label for="firstName">First Name:</label>
-        <input type="text" id="firstName" name="firstName" class="form-control" required><br><br>
+        <input type="text" id="firstName" name="firstName" class="form-control" required>
 
         <label for="lastName">Last Name:</label>
-        <input type="text" id="lastName" name="lastName" class="form-control" required><br><br>
+        <input type="text" id="lastName" name="lastName" class="form-control" required>
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" class="form-control" required><br><br>
+        <input type="password" id="password" name="password" class="form-control" required>
 
         <label for="reenterPassword">Re-enter Password:</label>
-        <input type="password" id="reenterPassword" name="reenterPassword" class="form-control" required><br><br>
+        <input type="password" id="reenterPassword" name="reenterPassword" class="form-control" required><br>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
     </form>
@@ -95,9 +95,6 @@
     errorMessage.innerHTML = message;
     errorMessage.style.display = "block";
   }
-
-
-
 </script>
 </body>
 </html>
