--- a/frontend/public/signup.html
+++ b/frontend/public/signup.html
@@ -65,7 +65,7 @@
     })
     .then(response => {
       if (response.ok) {
-        displaySuccessMessage("Sign up successful!. Please check with Admin to activate the user.");
+        displaySuccessMessage("Sign up is successful!. Please check with Admin to activate the user.");
 
         setTimeout(gotoLogin, 5000);
       } else {
